# browser-history-manager

./: .gitignore  PRD.md  README-ZH.md  README.md  docker-compose.yml  openapi.yaml
.claude/: settings.local.json
extension/: README.md  manifest.json  test-debug.html
extension/background/: background.js
extension/content/: history-highlighter.css  history-highlighter.js  link-highlighter.js
extension/core/: config-manager.content.js  config-manager.js  history-manager.content.js  history-manager.js
extension/options/: options.css  options.html  options.js
extension/popup/: popup.css  popup.html  popup.js
extension/utils/: config-manager.js  config.js  constants.js  db.js  event-emitter.js  http-client.js  logger.js
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: CustomPagination.vue  HistoryTable.vue  RuleManager.vue  SearchFilters.vue
frontend/src/services/: api.js
history-server/: Cargo.toml  Dockerfile  README_CACHE.md  docker-compose.yml
history-server/config/: default.toml  default.yml
history-server/migrations/: 20240319_001_create_normalization_rules.sql
history-server/src/: main.rs  tracing_config.rs
history-server/src/config/: default.toml  mod.rs
history-server/src/error/: mod.rs
history-server/src/handlers/: history.rs  mod.rs  normalization.rs
history-server/src/models/: history.rs
history-server/src/services/: cache.rs  database.rs  es.rs  mod.rs  mongo.rs  redis_cache.rs  url_normalizer.rs
utils/: http-client.js
