[package]
name = "history-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
elasticsearch = "8.5.0-alpha.1"
mongodb = "2.7.1"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.3"
env_logger = "0.10.1"
log = "0.4.20"
anyhow = "1.0.75"
thiserror = "1.0.50"
uuid = { version = "1.6.1", features = ["v4"] }
actix-cors = "0.6"
utoipa = { version = "4.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "5.0", features = ["actix-web"] }
